8145136: Upgrade CLDR locale data
Reviewed-by: naoto, okutsu, peytoia